Version 0.1
* Feb 20 2010 
- First release

* Feb 24 2010
- Code cleanup, add Desktop file and remove global variables.

* Feb 26 2010
- Change the reset function so that gui is not reloaded.